--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #DataSource properties
-spring.datasource.url=jdbc:mysql://localhost/BAM
-spring.datasource.username=manar
-spring.datasource.password=manar
+spring.datasource.url=jdbc:mysql://localhost/bam
+spring.datasource.username=root
+spring.datasource.password=mysql362951478
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#JPA properities
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
