--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.username=manar
 spring.datasource.password=manar
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #JPA properities
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+spring.session.store-type=none
