--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 #DataSource properties
-spring.datasource.url=jdbc:mysql://localhost/bam
+spring.datasource.url=jdbc:mysql://localhost/BAM
 spring.datasource.username=root
 spring.datasource.password=mysql362951478
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+server.port=${port:8081}
