--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost/BAM
 spring.datasource.username=root
 spring.datasource.password=mysql362951478
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+#jpa config
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-
+#Server port
 server.port=${port:8081}
+#devtools config
+spring.devtools.livereload.enabled = true
