--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=mysql362951478
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #jpa config
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 #Server port
 server.port=${port:8081}
