region table html ed-daou

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DataSource properties
 spring.datasource.url=jdbc:mysql://localhost/BAM
-spring.datasource.username=root
-spring.datasource.password=mysql362951478
+spring.datasource.username=manar
+spring.datasource.password=manar
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #jpa config
 spring.jpa.hibernate.ddl-auto=create
